--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>AvatarControl: Consistent Text-Driven Talking Head Avatar Editing with Optical Flow Guidance</title>
+  <title> Follow Your Motion: A Generic Temporal Consistency Portrait Editing Framework with Trajectory Guidance</title>
   <link rel="icon" type="image/x-icon" href="static/images/WIS.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -52,7 +52,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title"><span style="color: rgb(255, 105, 180);">A</span><span style="color: rgb(255, 223, 0);">v</span><span style="color: rgb(255, 182, 193);">a</span><span style="color: rgb(183, 110, 121);">t</span><span style="color: rgb(255, 127, 80);">a</span><span style="color: rgb(250,119,182);">r</span><span style="color: rgb(75, 54, 232);">C</span><span style="color: rgb(255, 127, 80);">o</span><span style="color: rgb(183, 110, 121);">n</span><span style="color: rgb(34, 110, 121);">t</span><span style="color: rgb(183, 34, 121);">r</span><span style="color: rgb(183, 110, 100);">o</span><span style="color: rgb(183, 110, 121);">l</span>: Consistent Text-Driven Talking Head Avatar Editing with Optical Flow Guidance</h1>
+            <h1 class="title is-1 publication-title"><span style="color: rgb(255, 105, 180);">F</span><span style="color: rgb(255, 223, 0);">o</span><span style="color: rgb(255, 182, 193);">l</span><span style="color: rgb(183, 110, 121);">l</span><span style="color: rgb(255, 127, 80);">o</span><span style="color: rgb(250,119,182);">w</span><span style="color: rgb(75, 54, 232);">Y</span><span style="color: rgb(255, 127, 80);">o</span><span style="color: rgb(183, 110, 121);">u</span><span style="color: rgb(34, 110, 121);">r</span><span style="color: rgb(183, 34, 121);">M</span><span style="color: rgb(183, 110, 100);">o</span><span style="color: rgb(183, 110, 121);">t</span><span style="color: rgb(113, 110, 121);">i</span><span style="color: rgb(183, 40, 121);">o</span><span style="color: rgb(255, 127, 80);">n</span>: A Generic Temporal Consistency Portrait Editing
+ Framework with Trajectory Guidance</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
