--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://njust-yang.github.io/avatarcontrol.github.io/" target="_blank">author1</a>,
+                <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">author1</a>,
                 <span class="author-block">
-                  <a href="https://njust-yang.github.io/avatarcontrol.github.io/" target="_blank">author2</a><sup>*</sup>,</span>
+                  <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">author2</a><sup>*</sup>,</span>
                   <span class="author-block">
-                    <a href="https://njust-yang.github.io/avatarcontrol.github.io/" target="_blank">author3</a>,
+                    <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">author3</a>,
                   </span>
                   <span class="author-block">
-                    <a href="https://njust-yang.github.io/avatarcontrol.github.io/" target="_blank">author4</a>,
+                    <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">author4</a>,
                   </span>
                   <span class="author-block">
-                    <a href="https://njust-yang.github.io/avatarcontrol.github.io/" target="_blank">author5</a><sup>*</sup>,</span>
+                    <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">author5</a><sup>*</sup>,</span>
                   </span>
                   </div>
 
@@ -84,7 +84,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href='https://njust-yang.github.io/avatarcontrol.github.io/' target="_blank"
+                        <a href='https://anonymous-hub1127.github.io/FYM.github.io/' target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -93,20 +93,11 @@
                       </a>
                     </span>
 
-                    <!-- Supplementary PDF link -->
-                    <span class="link-block">
-                      <a href="https://njust-yang.github.io/avatarcontrol.github.io/" target="_blank"
-                      class="external-link button is-normal is-rounded is-dark">
-                      <span class="icon">
-                        <i class="fas fa-file-pdf"></i>
-                      </span>
-                      <span>Supplementary(Coming soon)</span>
-                    </a>
-                  </span>
+            
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://njust-yang.github.io/avatarcontrol.github.io/" target="_blank"
+                    <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -117,7 +108,7 @@
               
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://njust-yang.github.io/avatarcontrol.github.io/" target="_blank"
+                  <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
