--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ Specifically, given portrait images rendered by a pre-trained 3D Gaussian Splatt
       <div class="column is-full">
         <h2 class="title is-3">Methodology</h2>
         <div class="has-text-centered">
-          <img src="./pics/pipeline.png" alt="pipeline" style="max-width: 100%; height: auto;">
+          <img src="./pics/Fig 1.png" alt="pipeline" style="max-width: 100%; height: auto;">
         </div>
         <h2 class="subtitle has-text-justified">
           FYM begins with an efficient 3DGS model to render temporally consistent portraits. Next, we develop a diffusion model that intuitively and inherently learns the motion trajectories changes at different scales and pixel coordinates from the original video frames. Finally, we propose a dynamic re-weighted attention mechanism. This mechanism assigns higher weight coefficients to landmark coordinates in space and dynamically updates these weights based on landmark loss, achieving more consistent and refined facial expressions.
