--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Specifically, given portrait images rendered by a pre-trained 3D Gaussian Splatt
      <h2 class="title is-3">Comparisons with Video Editing Methods</h2>
       <video preload="auto"poster="" id="tree" autoplay controls muted loop width="600px" outline="0px"> 
         <!-- Your video -->
-<!--         <source src="pics/comparison.mp4" -->
+<!--         <source src="pics/demo.mp4" -->
         <source src="pics/comparison.mp4"
         type="video/mp4">
       </video>
