--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ Specifically, given portrait images rendered by a pre-trained 3D Gaussian Splatt
       <video preload="auto"poster="" id="tree" autoplay controls muted loop width="600px" outline="0px"> 
         <!-- Your video -->
 <!--         <source src="pics/demo.mp4" -->
-        <source src="pics/comparison.mp4"
+        <source src="pics/demo.mp4"
         type="video/mp4">
       </video>
       <!-- <h2 class="subtitle has-text-centered"> 
