--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@ Specifically, given portrait images rendered by a pre-trained 3D Gaussian Splatt
     <div class="columns is-centered has-text-centered">
       <div class="column is-full">
         <h2 class="title is-3">The Editing Results of Our Method</h2>
+        <h3 class="subtitle is-4">InstructPix2Pix+FYM</h3>
+        <h3 class="subtitle is-5">Prompt:</h3>
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-comp_avatar_1">
             <video poster="" id="comp_avatar_1" autoplay controls muted loop playsinline height="100%">
