--- a/index.html
+++ b/index.html
@@ -200,26 +200,23 @@ Specifically, given portrait images rendered by a pre-trained 3D Gaussian Splatt
       <div class="column is-full">
         <h2 class="title is-3">The Editing Results of Our Method</h2>
         <h3 class="subtitle is-4">InstructPix2Pix+FYM</h3>
-        <h3 class="subtitle is-5">Prompt:</h3>
+        <h3 class="subtitle is-5">Prompt: Change him into Lego style</h3>
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-comp_avatar_1">
             <video poster="" id="comp_avatar_1" autoplay controls muted loop playsinline height="100%">
-              <source src="./pics/demo1.mp4"
+              <source src="./pics/demo1r.mp4"
                       type="video/mp4">
             </video>
+            <p class="video-description">original</p>
           </div>
           <div class="item item-comp_avatar_2">
             <video poster="" id="comp_avatar_2" autoplay controls muted loop playsinline height="100%">
-              <source src="./pics/demo2.mp4"
+              <source src="./pics/demo1e.mp4"
                       type="video/mp4">
             </video>
+            <p class="video-description">edited results</p>
           </div>
-          <div class="item item-comp_avatar_3">
-            <video poster="" id="comp_avatar_3" autoplay controls muted loop playsinline height="100%">
-              <source src="./pics/demo3.mp4"
-                      type="video/mp4">
-            </video>
-          </div>
+          
         </div>
       </div>
     </div>
