--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ Specifically, given portrait images rendered by a pre-trained 3D Gaussian Splatt
         <div class="video-container">
           <div class="video-item">
             <video poster="" id="comp_avatar_1" autoplay controls muted loop playsinline>
-              <source src="./pics/demo3r.mp4" type="video/mp4">
+              <source src="./pics/demo7r.mp4" type="video/mp4">
             </video>
             <p class="video-description">original</p>
           </div>
@@ -298,7 +298,7 @@ Specifically, given portrait images rendered by a pre-trained 3D Gaussian Splatt
         <h2 class="title is-3">The Editing Results of Our Method: Neural Style Transfer+FYM</h2>
         
         <h3 class="subtitle is-5">Prompt:</h3>
-        <img src="style.jpg" alt="style" style="max-width: 100%; height: auto;">
+        <img src="./pics/style.jpg" alt="style" style="max-width: 100%; height: auto;">
         
         <!-- 视频容器，使用 Flexbox 布局 -->
         <div class="video-container">
