--- a/index.html
+++ b/index.html
@@ -57,17 +57,8 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">author1</a>,
-                <span class="author-block">
-                  <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">author2</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">author3</a>,
-                  </span>
-                  <span class="author-block">
-                    <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">author4</a>,
-                  </span>
-                  <span class="author-block">
-                    <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">author5</a><sup>*</sup>,</span>
+      
+                    <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">Anonymous authors</a><sup>*</sup>,</span>
                   </span>
                   </div>
 
