--- a/index.html
+++ b/index.html
@@ -58,13 +58,11 @@
               <!-- Paper authors -->
               <span class="author-block">
       
-                    <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">Anonymous authors</a><sup>*</sup>,</span>
+                    <a href="https://anonymous-hub1127.github.io/FYM.github.io/" target="_blank">Anonymous authors</a><sup></sup>,</span>
                   </span>
                   </div>
 
-                  <div class="is-size-6 publication-authors">
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding author</small></span>
-                  </div>
+                 
 
                   <div class="is-size-3 publication-authors">
                     <span class="author-block">Under Submission</span>
